--- a/public/index.html
+++ b/public/index.html
@@ -30,24 +30,14 @@
 
           <div class="msg-bubble">
             <div class="msg-info">
-              <div class="msg-info-name">BOT</div>
-              <!-- <div class="msg-info-time">12:45</div> -->
+              <div class="msg-info-name">ChatGril</div>
             </div>
             <div id="msg-text"></div>
           </div>
         </div>
 
-        <div class="msg right-msg">
-          <div class="msg-img"></div>
-
-          <div class="msg-bubble">
-            <div class="msg-info">
-              <div class="msg-info-name">Sajad</div>
-              <!-- <div class="msg-info-time">12:46</div> -->
-            </div>
-
-            <div class="msg-text">You can change your name in JS section!</div>
-          </div>
+        <div class="msg right-msg" id="msg-right">
+          
         </div>
       </main>
 
