--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
             crossorigin="anonymous"
         />
-        <title>Chat with Bot</title>
+        <title>ChatGrill</title>
     </head>
     <body>
         <div
