--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-            crossorigin="anonymous"
-        />
-        <title>ChatGrill</title>
-    </head>
-    <body>
-        <div
-            class="container container-fluid Main-container d-flex flex-column justify-content-between msger-chat"
-        >
-            <header class="msger-header">
-                <div class="msger-header-title">
-                    <i class="fas fa-comment-alt"></i> Chat-Grill...
-                </div>
-                <div class="msger-header-options">
-                    <span><i class="fas fa-cog"></i></span>
-                </div>
-            </header>
+      <head>
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta
+                  name="viewport"
+                  content="width=device-width, initial-scale=1.0"
+            />
+            <link rel="stylesheet" href="style.css" />
+            <link
+                  rel="stylesheet"
+                  href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+                  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+                  crossorigin="anonymous"
+            />
+            <link
+                  rel="stylesheet"
+                  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+                  integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+                  crossorigin="anonymous"
+                  referrerpolicy="no-referrer"
+            />
+            <title>ChatGrill</title>
+      </head>
+      <body>
+            <div
+                  class="container container-fluid Main-container d-flex flex-column justify-content-between msger-chat"
+            >
+                  <header class="msger-header">
+                        <div class="msger-header-title">
+                              <i class="fas fa-comment-alt"></i> Chat-Grill...
+                        </div>
+                        <div class="msger-header-options">
+                              <span><i class="fas fa-cog"></i></span>
+                        </div>
+                  </header>
 
-            <div class="chat-container" id="Chatdiv"></div>
+                  <div class="chat-container" id="Chatdiv"></div>
 
-            <form class="msger-inputarea" id="chat-form">
-                <input
-                    type="text"
-                    class="msger-input"
-                    id="inputMessage"
-                    autocomplete="off"
-                    placeholder="Enter your message..."
-                />
-                <button type="submit" class="msger-send-btn">Send</button>
-            </form>
-        </div>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="./main.js"></script>
-    </body>
+                  <form class="msger-inputarea" id="chat-form">
+                        <input
+                              type="text"
+                              class="msger-input"
+                              id="inputMessage"
+                              autocomplete="off"
+                              placeholder="Enter your message..."
+                        />
+                        <button type="submit" class="msger-send-btn">
+                              <i class="fa-solid fa-paper-plane"></i>
+                        </button>
+                  </form>
+            </div>
+            <script src="/socket.io/socket.io.js"></script>
+            <script src="./main.js"></script>
+      </body>
 </html>
